Fix math expression color and overflow

--- a/_sass/render.scss
+++ b/_sass/render.scss
@@ -336,3 +336,8 @@
     }
   }
 }
+
+.MathJax {
+  color: rgba($on-surface-color, 0.87);
+  overflow-x: auto;
+}
